css/main.css
/* ... */
html #agenda-section > .content-container > .widget > .block > .content {
    background-color: var(--mooie-bg-color-mid);
}

html #agenda-section > .content-container > .widget > .block > .content > table {
    border: none;
}

html #agenda-section > .content-container > .widget > .block > .content > table > thead > tr > th {
    background-color: var(--mooie-bg-color-mid);
    color: var(--mooie-text-color);
    border-color: var(--mid-gray);
    box-shadow: none;
}

html #agenda-section > .content-container > .widget > .block > .content > table > tbody > tr  {
    background-color: var(--mooie-bg-color-mid);
}

html #agenda-section > .content-container > .widget > .block > .content > table > tbody > tr > td {
    background-color: var(--mooie-bg-color-mid);
    color: var(--mooie-text-color);
    border-color: var(--mid-gray) !important;
    box-shadow: none;
}

html #studiewijzersContainer > div > ul {
    border-color: var(--mid-gray);
}

#studiewijzersContainer > div > ul > li {
    border-color: var(--mid-gray);
    background-color: var(--mooie-bg-color-mid);
}

#studiewijzersContainer > div > ul > li > a {
    color: var(--mooie-text-color);
}

html #agenda-section > .content-container > .widget > .block > footer.endlink {
    background-color: inherit;
    border: none;
    box-shadow: none;
    border-radius: 15px;
}

html #agenda-section > .content-container > .widget > .block > footer.endlink > a {
    color: var(--mooie-text-color);
    text-decoration: underline dashed var(--mid-gray);
}

html #idLesrooster > div > div > div > div {
    background: var(--mooie-bg-color-mid);
    border-radius: 15px;
}

html #idLesrooster > div > div > div > div > ul > li {
    border: none;
    background-color: var(--mooie-bg-color-mid);
}

html #idLesrooster > div > div > div > div > ul > li a {
    color: var(--mooie-text-color);
    background-color: var(--mooie-bg-color-mid);
}

html #idLesrooster > div > div > div > div > ul > li a:hover {
    color: var(--mooie-text-color);
    background-color: var(--mooie-bg-color-mid);
}

html #idLesrooster > div > div > div > div > ul > li a span {
    border: none;
    background-color: var(--mooie-bg-color-mid);
}

html #idLesrooster > div > div > div > div > ul > li a span:hover {
    border: none;
    background-color: var(--mooie-bg-color-hover);
}




/* Dialog */

html dna-overlay-container > dna-overlay > dna-message-dialog {
    background-color: var(--mooie-bg-color-mid);
    border-radius: 15px;
    color: var(--mooie-text-color);
}

html dna-overlay-container > dna-overlay > dna-message-dialog::before {
    width: 0;
}


/* Popup message */

html dna-overlay-container > dna-overlay > dna-snack-bar-overlay {
    color: var(--mooie-text-color);
    background-color: var(--mooie-bg-color-mid);
    border-color: var(--mid-gray);
    box-shadow: none;
}



/*~ Cijfers fix */

html #cijfers-laatst-behaalde-resultaten-container #idDetails > div > div.widget > div.block > div.content > dl.list-dl > dd:nth-child(2) {
    height: 32px;
    margin: 0;
}



/*~ Datum week */

.mpp-datum-week {
    color: var(--mid-gray);
}


/*~ menu berichten new */

html #menu-berichten-new > span {
    background-color: var(--mooie-bg-color-mid);
    border: none;
    box-shadow: none;
    color: var(--mooie-text-color);
}

html #menu-berichten-new > span::after {
    border-right: 5px solid var(--mooie-bg-color-mid);
}

html #menu-berichten-new {
    background-color: var(--primary-background);
}

html #menu-berichten-new > i::before {
    color: var(--mooie-text-color-white) !important;
}

/*~ help button  */
html #help-menu > span {
    background-color: var(--mooie-bg-color-mid);
    border: none;
    box-shadow: none;
    color: var(--mooie-text-color);
}

html #help-menu > span::after {
    border-right: 5px solid var(--mooie-bg-color-mid);
}

html #help-menu {
    background-color: var(--primary-background);
}

html #help-menu > i::before {
    color: var(--mooie-text-color-white) !important;
}

html #help-menu ~ .popup-menu {
    background-color: var(--mooie-bg-color-mid);
    color: var(--mooie-text-color);
    border: none;
}

html #help-menu ~ .popup-menu > h3 {
    color: var(--mooie-text-color);
}

html #help-menu ~ .popup-menu > .help-menu > a {
    color: var(--mooie-text-color);
}


/*/ Error ? */
html div.message > p {
    color: var(--mooie-text-color);
}


/* shell-blocker */

html .shell-blocker {
    background-color: color-mix(in srgb, var(--mooie-bg-color-mid) 35%, transparent);
}


/* faux label */

html .collapsed-menu #faux-label {
    color: var(--mooie-text-color);
    background-color: var(--mooie-bg-color-mid);
    border: none;
    box-shadow: none;
    z-index: 99999;
}

html div.container > div.menu-host.loading.collapsed-menu > nav > div.menu-container > ul > li > a > span::after {
    border-right-color: var(--mooie-bg-color-mid);
}



/* faux popup menu */

html div.container > div.menu-host.loading.collapsed-menu > nav > div.faux.popup-menu {
    color: var(--mooie-text-color);
    background-color: var(--mooie-bg-color-mid);
    border: none;
    box-shadow: none;
}

html div.container > div.menu-host.loading.collapsed-menu > nav > div.faux.popup-menu::after {
    border-right-color: var(--mooie-bg-color-mid);
}

html div.container > div.menu-host.loading.collapsed-menu > nav > div.faux.popup-menu h3,
html div.container > div.menu-host.loading.collapsed-menu > nav > div.faux.popup-menu a {
    color: var(--mooie-text-color);
}

html div.container > div.menu-host.loading.collapsed-menu > nav > div.faux.popup-menu a:hover {
    background-color: var(--mooie-bg-color-hover);
}




/*! Studiewijzers list --new */

#studiewijzer-container > section > div > div.studiewijzer-list.normaal > div.head {
    display: none;
}
/* ... */

